# Truss

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  PROGRESS.md  README.md  docker-compose.yml  index.html  package-lock.json  package.json  progress.md  pyproject.toml  render.yaml
apps/: __init__.py  api.py  replay_run.py  worker.py
backend/: requirements.txt
backend/api/: audit.py  gate.py  sessions.py
backend/app/: config.py  database.py  main.py  websocket.py
backend/audit/: trail.py
backend/classifier/: action_classifier.py  taxonomy.py
backend/engine/: decision_engine.py
backend/models/: gate.py
backend/scanner/: injection_scanner.py
backend/tests/: conftest.py  test_api_health.py  test_audit.py  test_classifier.py  test_engine.py  test_gate_api.py  test_models.py  test_scanner.py  test_sdk.py  test_sessions.py  test_websocket.py
config/: __init__.py  settings.py
data/candidates/: example_candidate.json
data/tasks/: example_task.json
db/: __init__.py  client.py  init.sql  repositories.py
demo_agent/: CLAUDE.md  agent.py  tools.py
demo_agent/scenarios/: email_injection.py  file_exfiltration.py
fixtures/: benign_samples.json  injection_samples.json
graphs/: __init__.py  eval_graph.py  state.py
probes/: __init__.py  base.py  consistency_check.py  instruction_compliance.py  schema_validation.py
schemas/: __init__.py  base.py  candidate.py  decision.py  probe.py  run.py  task.py  trace.py
sdk/python/: truss_sdk.py
server/: dependencies.py  main.py  replay_run.py  report_generator.py  run_one.py  runs_router.py  ui_router.py  users_router.py  worker.py
server/middleware/: __init__.py  idempotency.py  (+1 more)
src/: main.js  router.js
tests/: __init__.py  conftest.py  test_api.py  test_ui.py  test_worker.py
ui/: index.html  package-lock.json  package.json  vite.config.js
utils/: __init__.py  redis_client.py
(+37 files in other folders)
